fixed header z-index

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -543,6 +543,7 @@ header .navbar {
   padding: 0px;
   text-align: center;
   width: 120px;
+  z-index: 300;
 }
 
 .navbar li:hover > a{
